remove code hyatt put in a long time ago that sets the mouse coordinates to 0,0 for scrollwheel events. Now uses the actual coordinate (r=pink, sr=bryner, bug 256538)