widget/src/cocoa/nsChildView.mm
@@ -2782,10 +2782,6 @@ const PRInt32 kNumLines = 4;
     outGeckoEvent->refPoint.x = outGeckoEvent->point.x = NS_STATIC_CAST(nscoord, localPoint.x);
     outGeckoEvent->refPoint.y = outGeckoEvent->point.y = NS_STATIC_CAST(nscoord, localPoint.y);
 
-    if (outGeckoEvent->message == NS_MOUSE_SCROLL) {
-      outGeckoEvent->refPoint.x = outGeckoEvent->refPoint.y = 0;
-      outGeckoEvent->point.x = outGeckoEvent->point.y = 0;
-    }
   }
   
   // set up modifier keys
